File Input Output

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/Lab_9_Text_File_Input_and_output_Creating_Graphs_Class_Inheritance.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcommon-1.0.23.jar=H:\\NetBeansProjects\\Lab 9 Text File Input and output Creating Graphs Class Inheritance\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=..\\..\\CMM001 Introduction to Object-Oriented Programming\\jfreechart-1.0.19.jar
 file.reference.jfreechart-1.0.19.jar-1=jfreechart-1.0.19.jar
 includes=**
@@ -34,7 +35,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar-1}
+    ${file.reference.jfreechart-1.0.19.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
